[package]
name = "podcatch_rust"
version = "0.5.24"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "podcatch-rust"
priority = "optional"
section = "rust"
provides = "podcatch-rust"
extended-description = """\
CLI Podcatcher written in Rust."""

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
checksums = "0.9"
clap = {version="4.0", features=["derive"]}
crossbeam-utils = "0.8"
deadpool = "0.10"
deadpool-postgres = "0.12"
deadqueue = "0.2"
derive_more = "0.99"
dirs = "5.0"
dotenv = "0.15"
envy = "0.4"
env_logger = "0.10"
futures = "0.3"
itertools = "0.12"
log = "0.4"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.6", features=["deadpool"]}
rand = "0.8"
refinery = {version="0.8", features=["tokio-postgres"]}
reqwest = {version="0.11", features=["cookies", "json", "rustls-tls", "stream"], default_features=false}
roxmltree = "0.19"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = "1.6"
stack-string = {git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.2"}
stdout-channel = "0.6"
thiserror = "1.0"
tokio = {version = "1.34", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = "0.7"
walkdir = "2.3"

[[bin]]
name = "podcatch-rust"
path = "src/podcatch_rust.rs"
doc = false
